tests/paczka1/fuzzy1/42994363.err
Error in line 1: zrUAnyyq A509 50,3
Error in line 18: PArmkIz A584 94,1
Error in line 28: zrUAnyyq A509 16,0
Error in line 34: zrUAnyyq S868 17,50
Error in line 30: zrUAnyyq A584 41,1
